Update article + GAnalytics

--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,8 @@
 baseURL: "https://codeinu.it/"
 title: codeinu.it
 paginate: 5
-theme: PaperMod
+theme: ["PaperMod", "hugo-notice"]
+googleAnalytics: G-3C32JYQKRF
 
 enableRobotsTXT: true
 buildDrafts: false
@@ -19,7 +20,7 @@ params:
   keywords: [Blog, Portfolio, PaperMod]
   author: codeinu
   # author: ["Me", "You"] # multiple authors
-  images: ["<link or path of image for opengraph, twitter-cards>"]
+  #images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
   defaultTheme: dark # dark, light
   disableThemeToggle: true
